fix main navigation z-index

--- a/src/django_smartbase_admin/static/sb_admin/src/css/_base.css
+++ b/src/django_smartbase_admin/static/sb_admin/src/css/_base.css
@@ -105,6 +105,10 @@
         @apply text-dark-900 bg-notice-100;
     }
 
+    #main-navigation {
+        z-index: 11;
+    }
+
     #notification-messages {
         @apply z-1000 fixed bottom-72 left-24 right-24 mx-auto max-w-1180 mb-24 flex flex-col items-center gap-16;
         max-height: calc(100vh - 6rem);
